<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/clouds"
    android:orientation="vertical" >

    <!--  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#f0f0f0" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:src="@drawable/icon_2" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000000" />

    </LinearLayout>-->

    <Button
        android:id="@+id/scan_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:onClick="lerQR"
        android:text="@string/scan" />

    <Button
        android:id="@+id/botao_listarCadastradosEvento"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:onClick="listarCadastrados"
        android:text="@string/ver_cadastrados" />

    <Button
        android:id="@+id/botao_enviarArquivo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:onClick="enviarArquivo"
        android:text="@string/enviar_arquivo" />

</LinearLayout>